ASP_MVC_NoAuthentication/wwwroot/css/LoginPage.css
@import url(https://fonts.googleapis.com/css?family=Roboto:300);
/* PC Resolution */
@media (min-width: 576px) {
    .login-page {
        min-width: 320px;
        width: 100%;
        height: 95vh;
        text-align: center;
        position: relative;
        margin: 0;
    }

    .vertical-center {
        margin: 0;
        position: relative;
        top: 50%;
        -ms-transform: translateY(-50%);
        transform: translateY(-50%);
    }

    .form {
        width: 30%;
        min-width: 320px;
        z-index: 1;
        font-size: 1.2vw;
        font-weight: 700;
        color: #0111a2;
        background: #FFFFFF;
        border-radius: 3vw;
        margin: 0 auto 5vw;
        padding: 3vw;
        text-align: center;
        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
    }

        .form input {
            font-family: "Roboto", sans-serif;
            font-size: 1.2vw;
            color: #0111a2;
            outline: 0;
            background: #f2f2f2;
            width: 100%;
            border: 0;
            margin-bottom: 8%;
            padding: 0.9vw;
            box-sizing: border-box;
        }

        .form button {
            font-family: "Roboto", sans-serif;
            font-size: 1.4vw;
            letter-spacing: 0.1vw;
            font-weight: 900;
            text-transform: uppercase;
            outline: 0;
            background: #0111a2;
            width: 100%;
            border: 0;
            border-radius: 20px;
            padding: 15px;
            color: #FFFFFF;
            -webkit-transition: all 0.3s ease;
            transition: all 0.3s ease;
            cursor: pointer;
        }

            .form button:hover, .form button:active, .form button:focus {
                background: #22e0b1;
                color: #0111a2;
            }

        .form .message {
            margin: 15px 0 0;
            color: #b3b3b3;
            font-size: 1vw;
        }

            .form .message a {
                color: #4CAF50;
                text-decoration: none;
            }

        .form .register-form {
            display: none;
        }
}


/* Mobile resolution */
@media (max-width: 576px) {
    .login-page {
        min-width: 320px;
        width: 100%;
        height: 95vh;
        text-align: center;
        position: relative;
        margin: 0;
    }

    .vertical-center {
        margin: 0;
        position: relative;
        top: 50%;
        -ms-transform: translateY(-50%);
        transform: translateY(-50%);
    }

    .form {
        width: 30%;
        min-width: 320px;
        z-index: 1;
        font-size: 5vw;
        font-weight: 700;
        color: #0111a2;
        background: #FFFFFF;
        border-radius: 3vw;
        margin: 0 auto 5vw;
        padding: 8vw;
        text-align: center;
        box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
    }

        .form input {
            font-family: "Roboto", sans-serif;
            font-size: 5vw;
            color: #0111a2;
            outline: 0;
            background: #f2f2f2;
            width: 100%;
            border: 0;
            margin-bottom: 8%;
            padding: 3vw;
            box-sizing: border-box;
        }

        .form button {
            font-family: "Roboto", sans-serif;
            font-size: 6vw;
            letter-spacing: 0.5vw;
            font-weight: 900;
            text-transform: uppercase;
            outline: 0;
            background: #0111a2;
            width: 100%;
            border: 0;
            border-radius: 20px;
            padding: 15px;
            color: #FFFFFF;
            -webkit-transition: all 0.3 ease;
            transition: all 0.3 ease;
            cursor: pointer;
        }

            .form button:hover, .form button:active, .form button:focus {
                background: #22e0b1;
                color: #0111a2;
            }

        .form .message {
            margin: 15px 0 0;
            color: #b3b3b3;
            font-size: 4.2vw;
        }

            .form .message a {
                color: #4CAF50;
                text-decoration: none;
            }

        .form .register-form {
            display: none;
        }
}




    .container {
        position: relative;
        z-index: 1;
    }

        .container:before, .container:after {
            content: "";
            display: block;
            clear: both;
        }

        .container .info {
            text-align: center;
        }

            .container .info h1 {
                padding: 0;
                font-size: 36px;
                font-weight: 300;
                color: #1a1a1a;
            }

            .container .info span {
                color: #4d4d4d;
                font-size: 12px;
            }

                .container .info span a {
                    color: #000000;
                    text-decoration: none;
                }

                .container .info span .fa {
                    color: #EF3B3A;
                }

